force-app/main/default/objects/Customer_Document__c/Customer_Document__c.object-meta.xml
<CustomObject>
    <description>Track status&apos;s and other information that will be sent from DocuSign.</description>
    <label>CLM Document History</label>
    <nameField>
        <label>Customer Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CLM Documents History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>