force-app/main/default/objects/Customer_Document__c/fields/Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Document_ID__c</fullName>
    <label>Document ID</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>