force-app/main/default/objects/Customer_Document__c/fields/Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Document_Link__c</fullName>
    <description>In the CLM Document History report provide a link to the CLM browser URL so the user can access the DocuSign record.</description>
    <label>Document Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>