force-app/main/default/objects/Customer_Document__c/fields/Document_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Sent_Date__c</fullName>
    <label>Document Sent Date</label>
    <type>DateTime</type>
</CustomField>