force-app/main/default/objects/Customer_Document__c/fields/Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Status__c</fullName>
    <label>Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Executing</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Ready to Send to Customer for Signature</fullName>
            </value>
            <value>
                <fullName>Sent for Signature</fullName>
            </value>
            <value>
                <fullName>Ready for Preview</fullName>
            </value>
            <value>
                <fullName>Choose the Salesperson to email to</fullName>
            </value>
            <value>
                <fullName>Customer is Redlining Document</fullName>
            </value>
            <value>
                <fullName>Additional User is Approving</fullName>
            </value>
            <value>
                <fullName>Sales is reviewing Customer redlines</fullName>
            </value>
            <value>
                <fullName>Sales is Sending for Additional Review</fullName>
            </value>
            <value>
                <fullName>Legal Review</fullName>
            </value>
            <value>
                <fullName>Customer is Redlining Other Documents, Order Form has not been sent</fullName>
            </value>
            <value>
                <fullName>Sales Review</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
            <value>
                <fullName>Signature Cancelled</fullName>
            </value>
            <value>
                <fullName>Signature Request Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>