force-app/main/default/objects/Customer_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>