force-app/main/default/objects/Customer_Document__c/fields/Document_Version__c.field-meta.xml
<CustomField>
    <fullName>Document_Version__c</fullName>
    <description>track which version of the Legal Documents (Order Form, Amendment Order Form) have been sent to and signed by the customer</description>
    <label>Document Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>