force-app/main/default/objects/Customer_Document__c/fields/Initial_Email_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Initial_Email_Recipient__c</fullName>
    <description>The DocuSign tool needs the ability to know the email address of the Contact selected at time of Legal Document Generation</description>
    <label>Initial Email Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>