force-app/main/default/objects/Customer_Document__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <description>This will provide information on which line of business the documents are for and will allow users to filter by LOB when viewing documents.</description>
    <label>LOB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FINANCIAL</fullName>
            </value>
            <value>
                <fullName>HOSPITALITY</fullName>
            </value>
            <value>
                <fullName>RETAIL</fullName>
            </value>
            <value>
                <fullName>T&amp;T</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <isActive>false</isActive>
                <label>All</label>
            </value>
            <value>
                <fullName>Banking</fullName>
                <isActive>false</isActive>
                <label>Banking</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>