force-app/main/default/objects/Customer_Document__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>This is being created so that ,once the OF is signed this field should be updated and the value of CPQ Quote&apos;s PO number can be updated  back with the value here.</description>
    <label>PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>