force-app/main/default/objects/Customer_Document__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipName>Customer_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>